[package]
name = "rustmob"
version = "0.1.0"
authors = ["Rahul Agrawal <ragrawal@mphrx.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std="^1.7.0"
firebase-rs="^1.0.3"
chrono="^0.4.19"
machine-uid="^0.2.0"
clap="^2.33.3"
